# fatigue_detection

./: CMakeLists.txt  README.md  aspect_ratio.cpp  opencv_test.cpp  opencv_test.sln
